# wgpu_nrd

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
examples/cornell-demo/: Cargo.toml
examples/cornell-demo/src/: geometry.rs  main.rs  pipelines.rs  scene.rs
examples/cornell-demo/src/shaders/: blit.wesl  gbuffer.wesl  trace.wesl
shader/: Cargo.toml  build.rs
shader/src/: lib.rs
shader/src/shaders/: NRD.wesl
src/: dispatch.rs  error.rs  format.rs  lib.rs  pipelines.rs  pools.rs  reflect.rs  resources.rs
