[package]
name = "wgpu_nrd"
version = "0.1.0"
edition = "2024"
description = "wgpu integration for NVIDIA NRD"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
nrd-sys = { git = "https://github.com/dylanblokhuis/nrd-sys.git" }
rspirv-reflect = "0.9"
thiserror = "2.0"
wgpu.workspace = true

[workspace]
resolver = "3"
members = [".", "examples/cornell-demo", "shader"]

[workspace.dependencies]
wgpu = "29"
wesl = { version = "0.3", features = ["naga-ext"] }
