[package]
name = "wgpu_nrd"
version = "0.1.0"
edition = "2024"
description = "wgpu integration for NVIDIA NRD"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
rusty_nrd = { git = "https://github.com/dylanblokhuis/rusty_nrd.git" }
thiserror = "2.0"
wgpu.workspace = true

[workspace]
resolver = "3"
members = [".", "examples/cornell-demo", "shader"]

[workspace.dependencies]
wgpu = { git = "https://github.com/dylanblokhuis/wgpu.git", branch = "optional-sequential-bindings" }
wesl = { version = "0.3", features = ["naga-ext"] }
