[package]
name = "cornell-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bytemuck = "1.24"
glam = "0.29"
pollster = "0.4"
sdl3 = { version = "0.17", features = ["raw-window-handle"] }
wgpu.workspace = true
wgpu_nrd = { path = "../.." }
wesl.workspace = true
wgpu_nrd_shader = { path = "../../shader" }
